<resources>
    <string name="app_name">SEALS Weather</string>
    <string name="weather_state">Weather state</string>
    <string name="temp">22°C</string>
    <string name="tempMax">32°C</string>
    <string name="tempMin">12°C</string>
    <string name="humidity">RH: 64%</string>
    <string name="city">Digoin</string>
    <string name="pressure">987 hPa</string>
    <string name="sunrise">07:02</string>
    <string name="sunset">20:25</string>
    <string name="weatherType">Overcast</string>
    <string name="imgDescription">img</string>
    <string name="tab1">Hourly</string>
    <string name="tab2">Daily</string>
    <string name="dayOfWeek">MON</string>
    <string name="tab_text_1">Hourly</string>
    <string name="date">08.14</string>
    <string name="time">12:00</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">Light weather widget by SUPERSEAL</string>
    <string name="tempShort">00°C</string>
    <string name="intent_refreshing">app.weather.intent.REFRESHING</string>
    <string name="settings_description">Settings button</string>
    <string name="geo_header">Location preferences</string>
    <string name="use_location">Use location</string>
    <string name="location_auto">Auto refresh</string>
    <string name="location_auto_off">Location will not be refreshed automatically</string>
    <string name="location_auto_on">Location will be refreshed automatically</string>
    <string name="clear_locations">Clear locations</string>
    <string name="forecast_depth">Forecast depth, days</string>
    <string name="forecast_step">Forecast step, hours</string>
    <string name="hour_of_interest">Hour of interest</string>
    <string name="hour_of_interest_description">Forecast for this hour will be displayed in Daily tab</string>
    <string name="forecast_widget_step">Forecast step in widget, hours</string>
</resources>